<resources>
    <string name="app_name">Point Of Sale</string>
    <string name="add_item">Add Item</string>
    <string-array name="menu_items">
        <item>Receipts</item>
        <item>Reports by item</item>
        <item>Reports by date</item>
        <item>Reports by category</item>
    </string-array>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="receipt_nr">Receipt #%1$d</string>
    <string name="create_cart">Create Cart</string>
    <string name="all_items">All Items</string>
    <string name="add">Add</string>
    <string name="general_info">General Info</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_category">Category</string>
    <string name="label_vat">VAT(%)</string>
    <string name="prompt_scan">Scan</string>
    <string name="prices">Prices</string>
    <string name="prompt_cost">Cost</string>
    <string name="prompt_vat">(%)</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_barcode">Barcode</string>
    <string name="required_field">Fill this field</string>
    <string name="select">Select</string>
    <string name="add_category">-- Add Category --</string>
    <string name="description">Description</string>
    <string name="add_categori_label">Add Category</string>
    <string name="saving_category">Saving category…</string>
    <string name="category_already_exists">This category already exists.</string>
    <string name="select_category">Pick  a category.</string>
    <string name="configurations">Configurations</string>
    <string name="vat">VAT</string>
    <string name="set_vat">Set VAT in %</string>
    <string name="pref_default_vat">0</string>
    <string name="pref_tax">tax</string>
    <string name="pref_date_format">date_format</string>
    <string name="saving_item">Saving item…</string>
    <string name="cannot_add_item">Cannot add item, please try again.</string>
    <string name="add_receipt">Add receipt</string>
    <string name="new_receipt">New receipt</string>
    <string name="cannot_create_receipt">Cannot create a new receipt right now.</string>
    <string name="receipts">Receipts</string>
    <string name="amount_x_price">%1$s x %2$s</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_total">Total</string>
    <string name="apply_tax">Apply tax</string>
    <string name="ok">OK</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="total_money">Total %1$s</string>
    <string name="prompt_done">Done</string>
    <string name="pos">POS</string>
    <string name="date_format">Date format</string>

    <string-array name="prefDateFormat">
        <item name="sec">dd/MM/yyyy</item>
        <item name="sec">MM/dd/yyyy</item>
    </string-array>
    <string-array name="prefDateFormatValues">
        <item>dd/MM/yyyy</item>
        <item>MM/dd/yyyy</item>
    </string-array>
    <string name="choose_date_format">Choose date format</string>
    <string name="items">Items</string>
    <string name="items_count">Items %1$s</string>
    <string name="pick_item">Pick Item</string>
    <string name="today_only">Today only</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date_eu_format">dd/mm/yyyy</string>
</resources>
