<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.report_by_item.ReportByItemActivity"
    tools:showIn="@layout/activity_report_by_item"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    style="@style/ScrollableContentParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:focusableInTouchMode="true"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/pick_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/pick_item"
            android:background="@drawable/white_input_bottom_line"/>

        <CheckBox
            android:id="@+id/today_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:checked="true"
            android:text="@string/today_only"/>

        <LinearLayout
            android:id="@+id/pick_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"/>

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border_bg"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textSize="16sp"
                    android:text="@string/date_eu_format"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"/>

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border_bg"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textSize="16sp"
                    android:text="@string/date_eu_format"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>