<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="@android:color/white"
    tools:context="com.dbeqiraj.pointofsale.ui.add_item.AddItemActivity"
    tools:showIn="@layout/activity_add_item"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    style="@style/ContentParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="@dimen/margin_horizontal_16dp"
            android:paddingRight="@dimen/margin_horizontal_16dp"
            android:gravity="center_vertical"
            android:background="@drawable/grey_input_bottom_line"
            android:textColor="@color/colorDark"
            android:text="@string/general_info"
            android:textSize="19sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/margin_horizontal_16dp"
                android:paddingRight="@dimen/margin_horizontal_16dp"
                android:background="@drawable/white_input_bottom_line"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:gravity="center_vertical"
                android:text=""
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="@dimen/margin_horizontal_16dp"
            android:paddingRight="@dimen/margin_horizontal_16dp"
            android:background="@drawable/white_input_bottom_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_category"
                android:labelFor="@+id/kategoria"/>

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/white_input_bottom_line"
            android:paddingLeft="@dimen/margin_horizontal_16dp"
            android:paddingRight="@dimen/margin_horizontal_16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/white_input_right_line">

                <TextView
                    android:text="@string/label_vat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/vat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_horizontal_16dp"
                    android:layout_marginStart="@dimen/margin_horizontal_16dp"
                    android:checked="false"/>

            </LinearLayout>

            <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
                android:id="@+id/vat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_horizontal_16dp"
                android:paddingRight="@dimen/margin_horizontal_16dp"
                android:background="@android:color/white"
                android:hint="@string/prompt_vat"
                android:inputType="numberDecimal"
                android:gravity="center_vertical"
                android:enabled="false"
                android:text="0"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_input_bottom_line"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:background="@drawable/white_input_right_line">

                <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
                    android:id="@+id/barcode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_horizontal_16dp"
                    android:layout_marginStart="@dimen/margin_horizontal_16dp"
                    android:hint="@string/prompt_barcode"
                    android:background="@android:color/white"
                    android:inputType="text"
                    android:gravity="center_vertical"
                    android:text=""
                    android:maxLines="1"  />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/scan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button_add_item"
                android:text="@string/prompt_scan"
                android:textSize="18sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="@dimen/margin_horizontal_16dp"
            android:paddingRight="@dimen/margin_horizontal_16dp"
            android:gravity="center_vertical"
            android:background="@drawable/grey_input_bottom_line"
            android:textColor="@color/colorDark"
            android:text="@string/prices"
            android:textSize="19sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/margin_horizontal_16dp"
                android:paddingRight="@dimen/margin_horizontal_16dp"
                android:background="@drawable/white_input_bottom_line"
                android:hint="@string/prompt_price"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center_vertical"
                android:text=""
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/margin_horizontal_16dp"
                android:paddingRight="@dimen/margin_horizontal_16dp"
                android:background="@drawable/white_input_bottom_line"
                android:hint="@string/prompt_cost"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center_vertical"
                android:text=""
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>