<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_horizontal_16dp"
    android:padding="@dimen/margin_horizontal_16dp"
    android:background="@android:color/white">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/margin_horizontal_16dp"
            android:paddingRight="@dimen/margin_horizontal_16dp"
            android:background="@drawable/white_input_bottom_line"
            android:hint="@string/prompt_amount"
            android:inputType="numberSigned|numberDecimal"
            android:gravity="center_vertical"
            android:text=""
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/til_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.dbeqiraj.pointofsale.custom_views.clearable_edittext.ClearableEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/margin_horizontal_16dp"
            android:paddingRight="@dimen/margin_horizontal_16dp"
            android:background="@drawable/white_input_bottom_line"
            android:hint="@string/prompt_price"
            android:inputType="numberSigned|numberDecimal"
            android:gravity="center_vertical"
            android:text=""
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/tax_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_horizontal_16dp"
        android:orientation="horizontal"
        android:gravity="end|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/til_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_total"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/apply_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_tax"
            android:checked="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_horizontal_16dp"
        android:layout_marginBottom="@dimen/margin_horizontal_16dp"
        app:layout_constraintTop_toBottomOf="@+id/tax_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/prompt_done"
        tools:ignore="ButtonStyle" />

</android.support.constraint.ConstraintLayout>